    * added several convenience function to TimeSeriesViewer object
    * fixed a bug that did not allow to create new polygon features
    * temporal profile visualization: fixed icons to preview selected plot style, coordinate described by "<fid> <name>", e.g. "42 Deforested", fixed plot style preview
    * updated SpectralLibraryViewer
    * fixed spelling error in stacked band input dialog

2019-06-12 (version 1.3):
    * fixed #99: opening example closes QGIS on linux
    * fixed #96 and #99 : docutils not installed error when showing rst/md content
    * fixed #97: TSV does not start (Linux)

2019-05-31 (version 1.2):
    * added SaveAllMapsDialog  and menu option to export all maps as image files.
    * fixed #91: select Temporal Profile / Spectral Profile button activates the required map tools.
    * fixed #92: map canvas context menu "copy to clipboard" options.

2019-05-24 (version 1.1):
    * dates and data sources of the TimeSeries are now shown in a TreeView instead TableView
    * observation dates of current visible map canvases are highlighted in the time series tree view
    * sensor raster layer properties can be opened from MapView layer tree #87. Stats will be related to center mapcanvas.
    * fixed: StackedInputDialog, MapCanvas context menu, "Save Changes?" labeling dialog (#85), remove temporal profile (#86), draw new feature error (#84), Crosshair button status (#90), and some more

2019-05-15 (version 1.0, major update):

    * labeling tools to modify vector layers.
    * quick labeling for time-labels information
    * synchronization with QGIS Map canvas center
    * SpectralLibrary can import SpectralProfiles from a raster image based on vector positions
    * simplified MapView control dock, each MapView has it's own layer tree.
    * improved MapTool organization
    * removed PyQtGraph from list of required external python packages

2019-03-29:
    * renamed plugin folder from "timeseriesviewerplugin" to "EOTimeSeriesViewer".