@@ -364,6 +364,18 @@ ul.auto-toc {
 <h1 class="title">Changelog</h1>
 
 <dl class="docutils">
+<dt>2019-06-28 (version 1.4):</dt>
+<dd><ul class="first last simple">
+<li>adding vector layers with sublayers will add all sublayers</li>
+<li>map canvas context menu &quot;Focus on Spatial Extent&quot; will hide maps without time series data for the current spatial extent</li>
+<li>labeling dock allows to iterate over vector features. the spatial map extent will be centered to each feature (<a class="reference external" href="https://bitbucket.org/jakimowb/eo-time-series-viewer/issues/26">#26</a>)</li>
+<li>added several convenience function to TimeSeriesViewer object</li>
+<li>fixed a bug that did not allow to create new polygon features</li>
+<li>temporal profile visualization: fixed icons to preview selected plot style, coordinate described by &quot;&lt;fid&gt; &lt;name&gt;&quot;, e.g. &quot;42 Deforested&quot;, fixed plot style preview</li>
+<li>updated SpectralLibraryViewer</li>
+<li>fixed spelling error in stacked band input dialog</li>
+</ul>
+</dd>
 <dt>2019-06-12 (version 1.3):</dt>
 <dd><ul class="first last simple">
 <li>fixed <a class="reference external" href="https://bitbucket.org/jakimowb/eo-time-series-viewer/issues/99">#99</a>: opening example closes QGIS on linux</li>
